# tsp_colony

./: Cargo.toml  README.md  copy_missing_hpc_results.sh  neaiškumai  notes  run_in_mif_hpc_cluster.txt
hpc/: compile.sh  mpirun_example.sh  run_in_mif_hpc_cluster.txt
hpc_results/: bm_CABC_d198_1cpus_cs20_nlmax5_pcp0.8_prc0.5_pl0.2_lmin2_lmaxm0.5_r1_q3_e32_k16_cl2.json  bm_CABC_d198_1cpus_cs20_nlmax5_pcp0.8_prc0.5_pl0.2_lmin2_lmaxm0.5_r1_q3_e8_k16_cl2.json  bm_CABC_d198_1cpus_cs40_nlmax5_pcp0.8_prc0.5_pl0.2_lmin2_lmaxm0.5_r1_q3_e32_k16_cl3.json  bm_CABC_d198_1cpus_cs40_nlmax5_pcp0.8_prc0.5_pl0.2_lmin2_lmaxm0.5_r1_q3_e32_k16_cl4.json  bm_CABC_d198_1cpus_cs40_nlmax5_pcp0.8_prc0.5_pl0.2_lmin2_lmaxm0.5_r1_q3_e8_k16_cl2.json  bm_CABC_d198_1cpus_cs40_nlmax5_pcp0.8_prc0.5_pl0.2_lmin2_lmaxm0.5_r1_q3_e8_k16_cl3.json  bm_CABC_d198_1cpus_cs40_nlmax5_pcp0.8_prc0.5_pl0.2_lmin2_lmaxm0.5_r1_q3_e8_k16_cl4.json  bm_CABC_d198_1cpus_cs80_nlmax5_pcp0.8_prc0.5_pl0.2_lmin2_lmaxm0.5_r1_q3_e32_k16_cl2.json  bm_CABC_d198_1cpus_cs80_nlmax5_pcp0.8_prc0.5_pl0.2_lmin2_lmaxm0.5_r1_q3_e32_k16_cl3.json  bm_CABC_d198_1cpus_cs80_nlmax5_pcp0.8_prc0.5_pl0.2_lmin2_lmaxm0.5_r1_q3_e32_k16_cl4.json  bm_CABC_d198_1cpus_cs80_nlmax5_pcp0.8_prc0.5_pl0.2_lmin2_lmaxm0.5_r1_q3_e8_k16_cl2.json  bm_CABC_d198_1cpus_cs80_nlmax5_pcp0.8_prc0.5_pl0.2_lmin2_lmaxm0.5_r1_q3_e8_k16_cl3.json  bm_CABC_d198_1cpus_cs80_nlmax5_pcp0.8_prc0.5_pl0.2_lmin2_lmaxm0.5_r1_q3_e8_k16_cl4.json  bm_CABC_d198_2cpus_cs20_nlmax5_pcp0.8_prc0.5_pl0.2_lmin2_lmaxm0.5_r1_q3_e8_k16_cl3.json  bm_CABC_d198_2cpus_cs20_nlmax5_pcp0.8_prc0.5_pl0.2_lmin2_lmaxm0.5_r1_q3_e8_k16_cl4.json  bm_CABC_d198_2cpus_cs40_nlmax5_pcp0.8_prc0.5_pl0.2_lmin2_lmaxm0.5_r1_q3_e32_k16_cl2.json  (+355 more)
(+1531 files in other folders)
