[package]
name = "tsp_colony"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = { git = "https://github.com/rust-random/rand", features = ["small_rng"] }
tspf = "0.3.1"

[profile.release]
lto = true
codegen-units = 1
