[package]
name = "tsp_colony"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
mpi = { version = "0.6", features = ["derive"] }
rand = { git = "https://github.com/rust-random/rand", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.24", features = ["derive"] }
tspf = "0.3.1"

[profile.release]
lto = true
codegen-units = 1
