[package]
name = "tsp_colony"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
iterator_ilp = "2"
mpi = { version = "0.6", features = ["derive"] }
rand = { git = "https://github.com/rust-random/rand", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.24", features = ["derive"] }
tspf = "0.3.1"

# Do not alter the default release profile as it really kills compilation times.
[profile.release-opt]
inherits = "release"
lto = true
codegen-units = 1
